--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
 <!-- Added by HTTrack --><meta http-equiv="content-type" content="text/html;charset=utf-8" /><!-- /Added by HTTrack -->
 <head>
 <meta charset="UTF-8" />
-<title>Loading...</title>
+<title>Kreative Circle</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="description" content="Kreative Circle offers premium cinematography and photography services in Manipur, specializing in weddings, events, portraits, fashion, and brand shoots." />
+
 
 <style>
   @import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600&amp;display=swap');
