--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 <title>Kreative Circle</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="description" content="Kreative Circle offers premium cinematography and photography services in Manipur, specializing in weddings, events, portraits, fashion, and brand shoots." />
-
+<link rel="icon" type="image/png" sizes="32x32" href="/favicon.png">
+<link rel="apple-touch-icon" href="/favicon.png">
 
 <style>
   @import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600&amp;display=swap');
