--- a/index.html
+++ b/index.html
@@ -9,8 +9,21 @@
 <title>Kreative Circle</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="description" content="Kreative Circle offers premium cinematography and photography services in Manipur, specializing in weddings, events, portraits, fashion, and brand shoots." />
-<link rel="icon" type="image/png" sizes="32x32" href="/favicon.png">
-<link rel="apple-touch-icon" href="/favicon.png">
+<!-- Favicon & App Icons -->
+<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+<link rel="manifest" href="/site.webmanifest">
+<link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
+<link rel="shortcut icon" href="/favicon.ico">
+
+<!-- For Android/Chrome -->
+<link rel="icon" type="image/png" sizes="192x192" href="/android-chrome-192x192.png">
+<link rel="icon" type="image/png" sizes="512x512" href="/android-chrome-512x512.png">
+
+<!-- Optional Meta (theme colors for browsers/PWA) -->
+<meta name="msapplication-TileColor" content="#ffffff">
+<meta name="theme-color" content="#ffffff">
 
 <style>
   @import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600&amp;display=swap');
