--- a/gallery/index.html
+++ b/gallery/index.html
@@ -8,6 +8,18 @@
     <!-- Font Awesome CDN -->
     <link rel="stylesheet" href="../../cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="description" content="Kreative Circle offers premium cinematography and photography services in Manipur, specializing in weddings, events, portraits, fashion, and brand shoots." />
+<!-- Favicon & App Icons -->
+<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+<link rel="manifest" href="/site.webmanifest">
+<link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
+<link rel="shortcut icon" href="/favicon.ico">
+
+<!-- For Android/Chrome -->
+<link rel="icon" type="image/png" sizes="192x192" href="/android-chrome-192x192.png">
+<link rel="icon" type="image/png" sizes="512x512" href="/android-chrome-512x512.png">
     <style>
         * {
             margin: 0;
